classDiagram
    class LoginWindow {
        +login_user_entry
        +login_pass_entry
        +register_fields
        +do_login()
        +do_register()
        -setup_login_tab()
        -setup_register_tab()
    }

    class MainApp {
        +characters_tree
        +games_tree
        +show_main_menu()
        +logout()
        +load_characters()
        +show_character_detail()
        +create_character()
        +load_games()
        +create_game()
        +join_game()
        -setup_tabs()
        -setup_combat_view()
    }

    class API {
        +BASE_URL
        +login()
        +register()
        +create_character()
        +get_characters()
        +create_game()
        +join_game()
    }

    class LocalStorage {
        +storage
        +set_item()
        +get_item()
        +remove_item()
    }

    LoginWindow --> API : Usa
    LoginWindow --> LocalStorage : Guarda token
    MainApp --> API : Usa
    MainApp --> LocalStorage : Accede a datos

